// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<div>
  <div
    class="divider horizontal"
    role="none presentation"
  />
</div>
`;

exports[`Divider when large renders 1`] = `
<div>
  <div
    class="divider large horizontal"
    role="none presentation"
  />
</div>
`;

exports[`Divider when large when also vertical renders 1`] = `
<div>
  <div
    class="divider large vertical"
    role="none presentation"
  />
</div>
`;

exports[`Divider when larger renders 1`] = `
<div>
  <div
    class="divider larger horizontal"
    role="none presentation"
  />
</div>
`;

exports[`Divider when larger when also vertical renders 1`] = `
<div>
  <div
    class="divider larger vertical"
    role="none presentation"
  />
</div>
`;

exports[`Divider when largest renders 1`] = `
<div>
  <div
    class="divider largest horizontal"
    role="none presentation"
  />
</div>
`;

exports[`Divider when largest when also vertical renders 1`] = `
<div>
  <div
    class="divider largest vertical"
    role="none presentation"
  />
</div>
`;
